# mlops-credit-default

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
conf/: README.md
conf/base/: catalog.yml  globals.yml  mlflow.yml  parameters.yml
docs/: BUILD_PLAN.md  ROADMAP.md
notebooks/: 00_main.ipynb  01_data_quality.ipynb  02_data_cleaning.ipynb  03_data_feat_engineering.ipynb  04_data_split.ipynb  05_model_train.ipynb  06_model_selection.ipynb  07_model_predict.ipynb  08_data_drifts.ipynb  README.md
report/: REPORT.md  REPORT_OUTLINE.md  build_pdf.ps1  build_report.py  packages.md  report_style.css
report/figures/: pipeline_diagram.html
serving/: Dockerfile  README.md  requirements.txt
serving/app/: __init__.py  loader.py  main.py
src/my_mlops_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/my_mlops_project/pipelines/: __init__.py
src/my_mlops_project/pipelines/data_cleaning/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/data_drifts/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/data_feat_engineering/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/data_quality/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/data_split/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/model_predict/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/model_selection/: README.md  __init__.py  nodes.py  pipeline.py
src/my_mlops_project/pipelines/model_train/: README.md  __init__.py  nodes.py  pipeline.py
tests/: README.md  __init__.py  conftest.py
tests/pipelines/: __init__.py  test_data_cleaning.py  test_data_drifts.py  test_data_feat_engineering.py  test_data_quality.py  test_data_split.py  test_model_predict.py  test_model_selection.py  test_model_train.py
